feat: add two views and their content

--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,10 @@ yarn-error.log
 *.launch
 .settings/
 *.sublime-workspace
+.nx/
 
 # Visual Studio Code
+.vscode/
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
